feat: banner name list
