# routers/test.go
@@ -8,18 +8,17 @@ import (
 
 func (router RouterGroup) TestRouter() {
 
-	router.GET("test", FnTest)
+	router.GET("/test", FnTest)
 
 }
 
 // @Tags 测试模块
 // @Summary 功能测试
 // @Description 功能测试
-// @Router /test [GET]
+// @Router /api/test [GET]
 // @Accept json
 // @Produce json
 // @Success 200
 func FnTest(c *gin.Context) {
 	c.Redirect(http.StatusMovedPermanently, "https://google.com")
-
 }
